<resources>
    <string name="app_name">League Ping Tester</string>
    <string name="ms_label">Current Ping: %d ms</string>
    <string name="average_ms_label">Average Ping: %d ms</string>
    <string name="server">Server: %s</string>
    <string name="default_server">Change Default Server</string>
    <string name="graph_label">Ping (ms)</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="close">Close</string>
    <string name="about">About</string>
    <string name="about_body"><![CDATA[
        A simple app to check your League of Legends ping. Ping in app may vary slightly from in-game ping.<br/>
        IP Addresses provided by <a href=\'https://www.reddit.com/r/leagueoflegends/comments/4efy17/how_to_check_your_ping_without_getting_into_the/d20167p/\'>Riot Laslow</a>.<br/>
        Source code available on <a href=\'https://github.com/person808/LeaguePingTest\'>Github</a>.
    ]]></string>
    <string name="wifi_warning">Device not connected to wifi. Ping may be inaccurate.</string>
    <string name="wifi_settings">Wifi Settings</string>
    <string name="na_server">NA</string>
    <string name="euw_server">EUW</string>
    <string name="eune_server">EUNE</string>
    <string name="oce_server">OCE</string>
    <string name="lan_server">LAN</string>
</resources>
